# ollama-gui-plus

./: ARCHITECTURE.md  INSTALLATION.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_rag.py  test_tkinter_modern_themes.py
src/models/: chat_models.py
src/services/: ollama_service.py
src/utils/: document_processor.py  enhanced_ui.py  modern_theme_manager.py  system_utils.py  theme_manager.py  theme_persistence.py
src/viewmodels/: chat_viewmodel.py  model_management_viewmodel.py
src/views/: document_management_view.py  main_view.py  model_management_view.py
